k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: bom-backend 
  namespace: bom-processor
  labels: 
    app: bom-backend
spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: bom-backend
    template: 
      metadat: 
        labels: 
          app: bom-backend 
      spec: 
        containers: 
        - name: backend 
          image: bom-backend:v1
          imagePullPolicy: Never # Use local image only 
          ports: 
          - containerPort: 5000
            name: http 
          resources: 
            requests: 
              memory: "512Mi"
              cpu: "500m"
            limits: 
              memory: "2Gi"
              cpu: "2000m"
            livenessProbe: 
              httpGet:
                path: /
                port: 5000
              initialDelaySeconds: 10
              periodSeconds: 5
            readinessProbe: 
              httpGeet: 
                path: /
                port: 500 
              initialDelaySeconds: 10
              periodSeconds: 5
            volumeMounts: 
            - name: temp-storage 
              mountPath: /app/temp 
          volumes: 
          - name: temp-storage 
            emptyDir: {}
